unpackaged/main/default/objects/Case/fields/test__c.field-meta.xml
<CustomField>
        <fullName>test__c</fullName>
        <label>Test picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>