unpackaged/main/default/objects/Case/fields/Test_Field__c.field-meta.xml
<CustomField>
        <fullName>Test_Field__c</fullName>
        <label>Test Field</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>