unpackaged/main/default/objects/Case/listViews/MyOpenCases.listView-meta.xml
<ListView>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </ListView>